--- a/packages/project_alpha-keyring/PKGBUILD
+++ b/packages/project_alpha-keyring/PKGBUILD
@@ -3,7 +3,8 @@
 buildarch=1
 noautobuild=1
 
-pkgname=project_alpha-keyring
+_pkgname="project_alpha"
+pkgname="${_pkgname}-keyring"
 pkgver=20200715
 pkgrel=1
 pkgdesc='project_alpha PGP keyring'
@@ -12,16 +13,16 @@ license=('GPL3')
 arch=('any')
 depends=('gnupg')
 makedepends=('git')
-source=('git+${url}.git')
+source=("git+${url}.git")
 sha512sums=('SKIP')
 install=${pkgname}.install
 
 pkgver() {
-  cd "${pkgname}"
+  cd "${srcdir}/${_pkgname}/${pkgname}"
   head -n 1 Makefile | sed 's|^V=||'
 }
 
 package() {
-  cd "${pkgname}"
+  cd "${srcdir}/${_pkgname}/${pkgname}"
   make PREFIX=/usr DESTDIR="${pkgdir}" install
 }
