--- a/packages/project_alpha-keyring/PKGBUILD
+++ b/packages/project_alpha-keyring/PKGBUILD
@@ -6,7 +6,8 @@ noautobuild=1
 _pkgname="project_alpha"
 pkgname="${_pkgname}-keyring"
 pkgver=20200715
-pkgrel=1
+pkgrel=2
+groups=('project_alpha')
 pkgdesc='project_alpha PGP keyring'
 url='https://github.com/Cthulu201/project_alpha'
 license=('GPL3')
