--- a/packages/goland/PKGBUILD
+++ b/packages/goland/PKGBUILD
@@ -1,18 +1,18 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
-_pkgname="RubyMine"
-pkgname="rubymine"
+_pkgname="GoLand"
+pkgname="goland"
 pkgver=2022.1.3
 pkgrel=1
-pkgdesc="Ruby and Rails IDE with the full stack of essential developer tools"
+pkgdesc="Capable and Ergonomic Go IDE"
 arch=('x86_64')
-url=https://www.jetbrains.com/ruby/
+url='https://www.jetbrains.com/go/'
 license=(custom)
 groups=('yobuko')
-depends=(desktop-file-utils gtk-update-icon-cache)
-optdepends=('ruby: Ruby run/debug support')
-source=(https://download.jetbrains.com/ruby/${_pkgname}-${pkgver}.tar.gz)
-sha512sums=('52fc3a89881e92b8ffb11eef4f35746a2e7c51add4c8a9c2f6decc309a6de417e74a477dc9a9477ab4bd990f0789f74c91f59a81437260fb607cbfd611f262bb')
+depends=('glib2')
+options=('!strip')
+source=("https://download.jetbrains.com/go/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('22028f800a07217b4e0535c2fb4e64ed0b1e37f2f3eefbe4d8e6042c32d1bbcf8b1f29d2cee4b288160513661d28e31711dd94ac400de600039d7e3d9e968931')
 
 build() {
   cd "${srcdir}/${_pkgname}-${pkgver}/lib/pty4j-native/linux/"
