--- a/yopkg/yopkg.conf
+++ b/yopkg/yopkg.conf
@@ -1,9 +1,4 @@
-# Test Variables
-testchroot=$(cat ~/.bashrc | grep ASCHROOT | awk -F\" '{ print $2 }')
-testyopkg="test"
-testshell="bash"
-
-yochroot="${HOME}/dev/chroot"
-yopkgconfig="${HOME}/.config/yopkg/aspkg.conf"
+yochroot="${PWD}/chroot"
+yoconfig="${PWD}/yopkg.conf"
 yoshell=$(echo ${SHELL} | awk -F\/ '{ print $3 }')
 bobo="pwd"
