--- a/packages/rstudio-bin/PKGBUILD
+++ b/packages/rstudio-bin/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=rstudio-bin
 pkgver=2023.03.0_386
-pkgrel=1
+pkgrel=2
 pkgdesc="An integrated development environment (IDE) for R (binary from RStudio official repository)"
 arch=('x86_64')
 url="http://www.rstudio.org/"
@@ -16,15 +16,15 @@ provides=("rstudio-desktop")
 conflicts=('rstudio-desktop' 'rstudio-desktop-git' 'rstudio-desktop-preview-bin')
 options=(!strip)
 install="${pkgname}".install
-source=("https://download1.rstudio.org/electron/bionic/amd64/rstudio-${pkgver//_/-}-amd64.deb"
+source=("https://download1.rstudio.org/electron/jammy/amd64/rstudio-${pkgver//_/-}-amd64.deb"
         "rstudio-bin.install")
-sha512sums=('293f852fde8e33a9f2bf25cbca83995604c4c9bc688abfbd4bbaa2440f7aead6f4ff80a86ea0969607295ef60a52d0ed4035c0e14335b4b674e58892eaeaf1b5'
+sha512sums=('58fe9255a4f4e5b4022eef055b55a608b4a726e3b2b945bd076fd45fe7327584a58baa6af62a96c415e7528d7c0a1dd79ba7562d512addb4cb824c91c554a720'
             '97526989479c289244bad580ce0f1928775dcc2d31dfb18ce1bdccf1bc958398a5f4b1e93f9e2efbca949079f306c416b8e5a45672677a90d7c5b78bac3b8905')
 
 package() {
   shopt -s extglob
   cd "${srcdir}"
   install -d "${pkgdir}/usr/bin"
-  tar Jxpf data.tar.xz -C "${pkgdir}"
+  bsdtar xf data.tar.xz -C "${pkgdir}"
   ln -s /usr/lib/rstudio/rstudio "${pkgdir}/usr/bin/rstudio"
 }
