--- a/packages/datagrip/PKGBUILD
+++ b/packages/datagrip/PKGBUILD
@@ -1,9 +1,8 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
-_pkgname="DataGrip"
 pkgname="datagrip"
 pkgver=2023.1.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A database management environment for developers"
 arch=('x86_64')
 url="https://www.jetbrains.com/datagrip"
@@ -17,23 +16,14 @@ options=(!strip)
 source=("https://download.jetbrains.com/datagrip/${pkgname}-${pkgver}.tar.gz")
 sha512sums=('b1dbeb7db91b48046331b7775f256ac59b59eb9d867cd34d673fd18acc35fa1529c0bc7cc923a4adc8e8bf3a0d4bce19778f042aec014c214835e9f676df7a46')
 
-build() {
-  cd "${srcdir}/${_pkgname}-${pkgver}/lib/pty4j/linux/" || exit
-  find . -maxdepth 1 -not -path . -type d -not -name 'x86-64' -exec rm -rf {} \;
-}
-
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}" || exit
-  # Install director(y/ies)
-  install -dm0755 "${pkgdir}/usr/share/licenses/${pkgname}/"
-  install -dm0755 "${pkgdir}/opt/${pkgname}"
+  cd "${srcdir}/${pkgname:+DataGrip}-${pkgver}" || exit
+
   install -dm0755 "${pkgdir}/usr/bin/"
+  install -dm0755 "${pkgdir}/opt/${pkgname}"
+  install -dm0755 "${pkgdir}/usr/share/licenses/${pkgname}/"
 
-  # Install license(s)
-  mv "license/"* "${pkgdir}/usr/share/licenses/${pkgname}/"
-  rmdir "license"
-
-  # Setup executable(s)
   cp -a ./* "${pkgdir}/opt/${pkgname}/"
+  cp -a "license/"* "${pkgdir}/usr/share/licenses/${pkgname}/"
   ln -s "/opt/${pkgname}/bin/${pkgname}.sh" "${pkgdir}/usr/bin/${pkgname}"
 }
