--- a/packages/rubymine/PKGBUILD
+++ b/packages/rubymine/PKGBUILD
@@ -1,9 +1,8 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
-_pkgname="RubyMine"
 pkgname="rubymine"
 pkgver=2023.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Ruby and Rails IDE with the full stack of essential developer tools"
 arch=('x86_64')
 url=https://www.jetbrains.com/ruby/
@@ -12,26 +11,17 @@ groups=('yobuko')
 depends=(desktop-file-utils gtk-update-icon-cache)
 optdepends=('ruby: Ruby run/debug support')
 options=(!strip)
-source=(https://download.jetbrains.com/ruby/${_pkgname}-${pkgver}.tar.gz)
+source=(https://download.jetbrains.com/ruby/${pkgname:+RubyMine}-${pkgver}.tar.gz)
 sha512sums=('3e94a9822a0b7ad7640ec0f5133f5d1a0d277d5d1e0041772ae62ea08305b52d9db2dc47ab0d1dab80140fc467c24046e214d250819a09306f37841cfc5cc04e')
 
-build() {
-  cd "${srcdir}/${_pkgname}-${pkgver}/lib/pty4j/linux/" || exit
-  find . -maxdepth 1 -not -path . -type d -not -name 'x86-64' -exec rm -rf {} \;
-}
-
 package() {
-  cd "${srcdir}/${_pkgname}-${pkgver}" || exit
-  # Install director(y/ies)
-  install -dm0755 "${pkgdir}/usr/share/licenses/${pkgname}/"
-  install -dm0755 "${pkgdir}/opt/${pkgname}"
+  cd "${srcdir}/${pkgname:+RubyMine}-${pkgver}" || exit
+
   install -dm0755 "${pkgdir}/usr/bin/"
+  install -dm0755 "${pkgdir}/opt/${pkgname}"
+  install -dm0755 "${pkgdir}/usr/share/licenses/${pkgname}/"
 
-  # Install license(s)
-  mv "license/"* "${pkgdir}/usr/share/licenses/${pkgname}/"
-  rmdir "license"
-
-  # Setup executable(s)
   cp -a ./* "${pkgdir}/opt/${pkgname}/"
+  cp -a "license/"* "${pkgdir}/usr/share/licenses/${pkgname}/"
   ln -s "/opt/${pkgname}/bin/${pkgname}.sh" "${pkgdir}/usr/bin/${pkgname}"
 }
