--- a/packages/rubymine/PKGBUILD
+++ b/packages/rubymine/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
 pkgname="rubymine"
-pkgver=2023.1.3
-pkgrel=2
+pkgver=2023.1.4
+pkgrel=1
 pkgdesc="Ruby and Rails IDE with the full stack of essential developer tools"
 arch=('x86_64')
 url=https://www.jetbrains.com/ruby/
@@ -11,11 +11,11 @@ groups=('yobuko')
 depends=(desktop-file-utils gtk-update-icon-cache)
 optdepends=('ruby: Ruby run/debug support')
 options=(!strip)
-source=(https://download.jetbrains.com/ruby/${pkgname:+RubyMine}-${pkgver}.tar.gz)
-sha512sums=('3e94a9822a0b7ad7640ec0f5133f5d1a0d277d5d1e0041772ae62ea08305b52d9db2dc47ab0d1dab80140fc467c24046e214d250819a09306f37841cfc5cc04e')
+source=("${pkgname}-${pkgver}::https://download.jetbrains.com/ruby/${pkgname:+RubyMine}-${pkgver}.tar.gz")
+sha512sums=('8cb258e2f0a7e987c185b19aa5d7cc9ca36cef46bb7722589b95629ac7ecba7c22f8a0ee5f217a5badb063eea753cb9752f2936a1a449eeb0f1fb51323fb704f')
 
 package() {
-  cd "${srcdir}/${pkgname:+RubyMine}-${pkgver}" || exit
+  cd "${srcdir}/${pkgname:+RubyMine}-${pkgver%.4}" || exit
 
   install -dm0755 "${pkgdir}/usr/bin/"
   install -dm0755 "${pkgdir}/opt/${pkgname}"
