--- a/packages/brave-bin/PKGBUILD
+++ b/packages/brave-bin/PKGBUILD
@@ -20,12 +20,12 @@ provides=("${pkgname%-bin}=${pkgver}" 'brave-browser')
 conflicts=("${pkgname%-bin}")
 replaces=("${pkgname%-bin}")
 options=(!strip)
-source=("${pkgname}.zip::https://github.com/brave/${pkgname%-bin}-browser/releases/download/v${pkgver}/${pkgname%-bin}-browser-${pkgver}-linux-amd64.zip")
+source=("${pkgname}-${pkgver}.zip::https://github.com/brave/${pkgname%-bin}-browser/releases/download/v${pkgver}/${pkgname%-bin}-browser-${pkgver}-linux-amd64.zip")
 noextract=("${pkgname}.zip")
 sha512sums=('3cd19364f736a5f031e1b47d01cdf40065e19fa0a16e56eb6bc023fa626faef3b3a771966bc6b36a3c0a6c515cf1091baf48006765f6e3aaa6e007262f12292f')
 
 prepare() {
-  unzip "${pkgname}.zip" -d "${pkgname}"
+  unzip "${pkgname}-${pkgver}.zip" -d "${pkgname}"
 }
 
 package() {
