--- a/packages/brave-browser/PKGBUILD
+++ b/packages/brave-browser/PKGBUILD
@@ -1,10 +1,7 @@
 # Maintainer: Cthulu201 <cthulu201@duck.com>
 
-# Check for latest release:
-# `curl https://brave-browser-downloads.s3.brave.com/latest/release.version`
-
-pkgname=brave-bin
-pkgver=1.58.137
+pkgname=brave-browser
+pkgver=1.59.117
 pkgrel=1
 pkgdesc='A fast, private and secure web browser for PC, Mac and mobile'
 arch=(x86_64)
@@ -16,13 +13,11 @@ makedepends=('unzip')
 optdepends=('cups:             Printer support'
             'libgnome-keyring: Enable GNOME keyring support'
             'libnotify:        Native notification support')
-provides=("${pkgname%-bin}=${pkgver}" 'brave-browser')
-conflicts=("${pkgname%-bin}")
-replaces=("${pkgname%-bin}")
+replaces=("${pkgname%-browser}-bin")
 options=(!strip)
-source=("${pkgname}-${pkgver}.zip::https://github.com/brave/${pkgname%-bin}-browser/releases/download/v${pkgver}/${pkgname%-bin}-browser-${pkgver}-linux-amd64.zip")
+source=("${pkgname}-${pkgver}.zip::https://github.com/brave/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}-linux-amd64.zip")
 noextract=("${pkgname}-${pkgver}.zip")
-sha512sums=('1cef83e4f8f2dc2c27cb2d9b9fd6c29d3eeb71839fcf97922aabb2f3655bb4f71a482a0916455430d7d6f4d4a58a2bac519799576b48730a5ab6afca8bd22d00')
+sha512sums=('735484418fdbe501aca88f62ff2f16d7535b32ecf22fe918fdb398cb64991732796e7d08148091cd5739680701a2b2489afcb09157958d2aefc5e9773286d7e7')
 
 prepare() {
   unzip "${pkgname}-${pkgver}.zip" -d "${pkgname}-${pkgver}"
@@ -36,5 +31,5 @@ package() {
   install -Dm0644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
   cp -a ./* "${pkgdir}/opt/${pkgname}/"
-  ln -s "/opt/${pkgname}/${pkgname%-bin}-browser" "${pkgdir}/usr/bin/${pkgname%-bin}-browser"
+  ln -s "/opt/${pkgname}/${pkgname}" "${pkgdir}/usr/bin/${pkgname}"
 }
