--- a/packages/dropbox/PKGBUILD
+++ b/packages/dropbox/PKGBUILD
@@ -9,7 +9,7 @@
 # https://www.dropbox.com/scl/fo/0eu2dsn07fy5k0gt5fy74/AABbXqKHbY_mobVJhqgfOXYja/Glyph/Dropbox/SVG/DropboxGlyph_Blue.svg
 
 pkgname=dropbox
-pkgver=186.4.6207
+pkgver=187.4.5691
 pkgrel=1
 pkgdesc="A free service that lets you bring your photos, docs, and videos anywhere and share them easily."
 arch=("x86_64")
@@ -23,13 +23,13 @@ optdepends=('ufw-extras:           ufw rules for dropbox'
             'xdg-utils:            for "Launch Dropbox Website" and file manager integration'
             'libappindicator-gtk3: make tray icons themed under some desktop environments like KDE plasma')
 options=('!strip')
-#source=("${pkgname}-${pkgver}.tar.gz::https://clientupdates.dropboxstatic.com/dbx-releng/client/dropbox-lnx.x86_64-${pkgver}.tar.gz"
-source=("${pkgname}-${pkgver}.tar.gz::https://www.dropbox.com/download?plat=lnx.x86_64"
+source=("${pkgname}-${pkgver}.tar.gz::https://clientupdates.dropboxstatic.com/dbx-releng/client/dropbox-lnx.x86_64-${pkgver}.tar.gz"
+#source=("${pkgname}-${pkgver}.tar.gz::https://www.dropbox.com/download?plat=lnx.x86_64"
         "DropboxGlyph_Blue.svg"
         "terms.txt"
         "dropbox.service"
         "dropbox@.service")
-sha512sums=('851b902fae583e8154b77a3c2fd1b212a146e5a11aef71ab5c3231bba4d38964244f1edde4637840dfe4bdd2c4776c592c31c9e54a0d98346933784322a773fb'
+sha512sums=('de7461dc7fe51c9f968dec06733d800842454ed2af3c9959ddadd8019d694d60b88e175982d03034030d0047f70923c304a3e0a389e58354ed4e56b8c9da6234'
             '9202344b904dcd7955e5a355dadf537d1544140d74f8a33bdc40e18e36661e3a474d11cf17613eaebf4e76c170d8413d99abdedfb8635784bcd6892b4b259712'
             'c0cc64e924a70169a33744955e96172f8af6cddb5515c3988df1c7c2aa106b86989de2e1091714976c699b3f9751fb4da5dbffd5157ab9be2bc09c0aeebd8635'
             'edb11b5a07b6a1512a5345d8ce476562fbfd9ec5642f36315a0969a2583f0e6ce371d39d25063af3734f9527ad53abdc29278c046abc2921222777af6f693a4f'
